Fix chart selectors overflow

--- a/static/stylesheets/site.css
+++ b/static/stylesheets/site.css
@@ -93,6 +93,25 @@
     width: 21%;
     padding: 2%; }
 
+.flex-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+  .flex-wrap > * {
+    margin: 5px; }
+
 .overflow-x {
   overflow-x: auto; }
 
